fix(Grid): Changed API of Grid component to allow setting of min and max width for auto-fit, also aligning naming of spacing with gap.
BREAKING CHANGE:

Grid component, replaced columnAutoFit prop with autoFitWidthMax and autoFitWidthMin props. Replaced gutter prop with gap prop.

--- a/src/Grid/Grid.css
+++ b/src/Grid/Grid.css
@@ -1,16 +1,17 @@
 .Grid {
   display: grid;
+  grid-auto-rows: 1fr;
 }
 
-.Grid--gutter-x1  { grid-gap: var(--size--x1); }
-.Grid--gutter-x2  { grid-gap: var(--size--x2); }
-.Grid--gutter-x3  { grid-gap: var(--size--x3); }
-.Grid--gutter-x4  { grid-gap: var(--size--x4); }
-.Grid--gutter-x6  { grid-gap: var(--size--x6); }
-.Grid--gutter-x8  { grid-gap: var(--size--x8); }
-.Grid--gutter-x10 { grid-gap: var(--size--x10); }
-.Grid--gutter-x12 { grid-gap: var(--size--x12); }
-.Grid--gutter-x16 { grid-gap: var(--size--x16); }
+.Grid--gap-x1  { grid-gap: var(--size--x1); }
+.Grid--gap-x2  { grid-gap: var(--size--x2); }
+.Grid--gap-x3  { grid-gap: var(--size--x3); }
+.Grid--gap-x4  { grid-gap: var(--size--x4); }
+.Grid--gap-x6  { grid-gap: var(--size--x6); }
+.Grid--gap-x8  { grid-gap: var(--size--x8); }
+.Grid--gap-x10 { grid-gap: var(--size--x10); }
+.Grid--gap-x12 { grid-gap: var(--size--x12); }
+.Grid--gap-x16 { grid-gap: var(--size--x16); }
 
 .Grid--align-start  { justify-content: start; }
 .Grid--align-middle { justify-content: center; }
